--- a/frontend/maestro/acceptance/65_poi_radius.yaml
+++ b/frontend/maestro/acceptance/65_poi_radius.yaml
@@ -2,3 +2,7 @@ appId: host.exp.exponent
 ---
 - tapOn: "Show navigation menu" 
 - tapOn: "Points of interests"
+- assertVisible: "Search radius: 500m"
+- tapOn: 
+    point: 60%,42%
+- tapOn: "Search radius: 700m"
