--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "dependencies": {
+
+    "@jest/globals": "^29.7.0",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/react-native": "^0.73.0",
+    "expo": "^52.0.37",
+    "expo-constants": "^17.0.5",
+    "react": "^19.0.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-test-renderer": "^19.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+
     "expo-calendar": "^14.0.6",
     "expo-constants": "^17.0.5",
     "expo-permissions": "^14.4.0",
     "react-native-dotenv": "^3.4.11"
+
   }
 }
